# mloda

./: .clineignore  .clinerules  .custom_instructions.md  .dockerignore  .gitignore  .releaserc.yaml  404.html  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  index.html  info.md  link-todos-concise.md  link-todos-proposal.md  pyproject.toml  pytest.ini  search.html  tox.ini
.claude/: settings.json
.claude/agents/: green-agent.json  green-agent.md  red-agent.json  red-agent.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  mloda.code-workspace
.devcontainer/ai-agent-1/: devcontainer.json
.devcontainer/ai-agent-2/: devcontainer.json
.devcontainer/ai-agent-3/: devcontainer.json
.devcontainer/ai-agent-4/: devcontainer.json
.devcontainer/ai-agent-5/: devcontainer.json
.devcontainer/ai-agent-6/: devcontainer.json
.devcontainer/ai-agent-7/: devcontainer.json
.devcontainer/ai-agent-8/: devcontainer.json
.devcontainer/ki-agent-1/: devcontainer.json
.devcontainer/ki-agent-2/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: ci.yaml  gh-pages.yml  metadata-guard.yaml  release.yaml  security-scan.yaml
attribution/: ATTRIBUTION.md  THIRD_PARTY_LICENSES.md  attributions.py  location  third_party_licenses_location
chapter1/api-request/: index.html
chapter1/compute-frameworks/: index.html
chapter1/extender/: index.html
chapter1/feature-groups/: index.html
chapter1/installation/: index.html
design/: feature_group_test_tooling.md
development/: index.html
docs/: THIS FOLDER IS PUBLIC!  core-commands-slides.html  marimo_export_hook.py  mkdocs.yml
docs/design/: named-data-access-handles.md
docs/docs/: development.md  faq.md  index.md  license.md  missing.md  need-help.md
docs/docs/chapter1/: api-request.md  compute-frameworks.md  extender.md  feature-groups.md  installation.md
docs/docs/examples/: base_usage.ipynb  base_usage.py  feature_config_examples.json  (+2 more)
docs/licence/: requirements.txt
examples/: requirements.txt
examples/base_examples/: creditcard_2023_short.csv
examples/base_usage/: index.html
examples/mloda_basics/: 0_table_of_content.py  1_ml_mloda_intro.py  3_ml_data_feature_feature_groups.py  4_ml_data_providers_user_steward.py  create_synthetic_data.py
examples/sklearn_integration_basic/: index.html
faq/: index.html
in_depth/access-feature-data/: index.html
in_depth/artifacts/: index.html
in_depth/compute-framework-integration/: index.html
in_depth/data-access-patterns/: index.html
in_depth/data-quality/: index.html
in_depth/data-type-enforcement/: index.html
in_depth/discover-plugins/: index.html
in_depth/domain/: index.html
in_depth/feature-chain-parser/: index.html
in_depth/feature-config/: index.html
in_depth/feature-group-matching/: index.html
in_depth/feature-group-testing/: index.html
in_depth/feature-group-version/: index.html
in_depth/filter_data/: index.html
in_depth/framework-connection-object/: index.html
in_depth/framework-transformers/: index.html
in_depth/join_data/: index.html
in_depth/mask_engine/: index.html
in_depth/mloda-api/: index.html
in_depth/multiple_result_columns/: index.html
in_depth/named-data-access-handles/: index.html
in_depth/options-architecture/: index.html
in_depth/plugin-loader/: index.html
in_depth/property-mapping/: index.html
in_depth/streaming/: index.html
license/: index.html
memory-bank/: activeContext.md  compute_framework_test_refactoring_opportunities.md  compute_framework_test_tooling.md  compute_frameworks.md  deprecate-options-data-plan.md  feature_3_fix_summary.md  feature_group_modernization_steps.md  feature_groups.md  features_5_6_fix_summary.md  missing_feature_configs.md  options_analysis.md  phase3_migration_plan.md  productContext.md  progress.md  projectbrief.md  proposed_compute_framework.md  proposed_feature_groups.md  runtime_validation_plan.md  runtime_validation_summary.md  sklearn_feature_groups_implementation_plan.md  systemPatterns.md  techContext.md  todo.md
memory-bank/improvements/: default_column_names_merge.md  devcontainer-hardening.md  duplicate_tests_analysis.md  mloda_core_improvements.md  mloda_plugins_improvements.md  test-improvements.md  todo.md  todo_9_eliminate_type_ignore.md
memory_bank/: memory_bank_prompt.md  references.py
memory_bank/llm_generated_content/: projectbrief.md
memory_bank/prompts/: memory_bank_init_prompt.py
missing/: index.html
mloda/core/: README.md  optional_dependency.py  version.py
mloda/provider/: __init__.py
mloda/steward/: __init__.py
mloda/user/: __init__.py  duckdb.py  iceberg.py  pandas.py  polars.py  pyarrow.py  python_dict.py  spark.py  sqlite.py
mloda_core/: README.md
mloda_core/abstract_plugins/: abstract_feature_group.py  compute_frame_work.py  function_extender.py
mloda_core/api/: plugin_docs.py  request.py
mloda_core/core/: cfw_manager.py  engine.py
mloda_core/filter/: filter_engine.py  global_filter.py
mloda_core/prepare/: accessible_plugins.py  execution_plan.py  identify_feature_group.py  resolve_compute_frameworks.py  resolve_links.py
mloda_core/runtime/: compute_framework_executor.py  data_lifecycle_manager.py  run.py
mloda_plugins/: README.md
mloda_plugins/feature_group/: default_options_key.py
need-help/: index.html
tests/: README.md  conftest.py  requirements-test.txt  test_attributions.py  test_ci_paths_ignore.py  test_mloda_imports.py  test_packaging_metadata_guard.py  test_parallelization_modes_support.py  test_project_structure.py
tests/test_core/: test_compute_framework_availability.py  test_python_version.py  test_renamed_methods.py
tests/test_documentation/: conftest.py  test_ci_paths_ignore.py  test_dependency_resolution_example.py  test_doc_example_isolation.py  test_documentation.py  test_mkdocs_config.py
tests/test_memory_bank/: test_memory_bank.py
tests/test_plugins/: test_pattern_consistency.py  test_undeclared_option_reads.py
(+1042 files in other folders)
