[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mloda"
version = "0.6.3"
description = "mloda.ai: Open Data Access for ML and AI"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache-2.0" }
authors = [
    { name = "Tom Kaltofen", email = "info@mloda.ai" }
]
dependencies = [
    "pyarrow"
]

requires-python = ">=3.10,<3.15"
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-xdist",
    "pytest-order",
    "pytest-timeout",
    "ruff",
    "mypy",
    "mktestdocs",
    "pandera",
    "pyarrow",
    "testbook",
    "ipykernel",
    "bandit",
    "types-PyYAML",
    "types-requests",
    "types-toml",
    "scikit-learn>=1.0.0",
    "pip-audit<2.11.0",
    "pip-licenses-cli",
    "tomli>=1.0.0; python_version < '3.11'",
]
pandas = ["pandas"]
polars = ["polars"]
duckdb = ["duckdb"]
iceberg = ["pyiceberg"]
spark = ["pyspark"]
otel = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation",
    "opentelemetry-instrumentation-logging",
    "opentelemetry-instrumentation-requests",
]
sklearn = [
    "scikit-learn>=1.0.0",
    "joblib>=1.0.0",
]
text_cleaning = ["nltk>=3.8"]
docs = [
    "mkdocs",
    "mkdocs-jupyter",
    "notebook",
    "mermaid-py",
]
all = [
    "mloda[test]",
    "mloda[pandas]",
    "mloda[polars]",
    "mloda[duckdb]",
    "mloda[iceberg]",
    "mloda[otel]",
    "mloda[sklearn]",
    "mloda[text_cleaning]",
    "mloda[docs]",
]

[project.urls]
"Bug Tracker" = "https://github.com/mloda-ai/mloda/issues"
"Documentation" = "https://mloda-ai.github.io/mloda/"
"Source Code" = "https://github.com/mloda-ai/mloda"
"PyPI" = "https://pypi.org/project/mloda/"
"Homepage" = "https://mloda.ai"

[tool.setuptools.packages.find]
where = ["."]
include = ["mloda.*", "mloda_plugins*"]
exclude = ["mloda.community*", "mloda.enterprise*", "mloda.registry*", "mloda.testing*"]
namespaces = true

[tool.setuptools]
include-package-data = true

[tool.bandit]
exclude_dirs = [
    "venv",
    ".venv",
    "migrations",
    "__pycache__",
    "build",
    "dist",
    ".devcontainer",
    ".tox",
    ".vscode",
    "attribution",
    "*.egg-info",
    "site-packages"
]
skips = [
    "B101", # Use of assert detected. The enclosed code will be removed when compiling to optimised byte code.
    "B104"  # Possible binding to all interfaces detected.
]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "mloda_plugins.compute_framework.base_implementations.iceberg.iceberg_filter_engine"
disable_error_code = ["misc", "call-arg", "arg-type"]

[[tool.mypy.overrides]]
module = [
    "pyarrow.compute",
    "pyarrow.csv",
    "pyarrow.feather",
    "pyarrow.flight",
    "pyarrow.json",
    "pyarrow.orc",
    "pyarrow.parquet",
]
follow_imports = "skip"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["UP006", "UP007"]

[tool.ruff.lint.per-file-ignores]
"docs/**/*.ipynb" = ["E402"]

[tool.uv]
exclude-newer = "2026-05-20T00:00:00Z"  # was "7 days"; pinned to cover security patches: urllib3 2.7.0 (2026-05-07), idna 3.15 (2026-05-12), mistune 3.2.1 (2026-05-03), nbconvert 7.17.1 (2026-04-08). Revert to "7 days" once idna 3.15 ages past the rolling window (~2026-05-19).
# Constraints applied only to transitive dependencies to remediate Dependabot security alerts.
# - urllib3 >= 2.7.0: GHSA decompression-bomb bypass + sensitive headers across origins
# - idna   >= 3.15:   idna.encode() bypass of CVE-2024-3651 fix
# - mistune >= 3.2.1: Heading ID injection XSS (CVE-2026-33079). Note: figclass/figwidth and Math Plugin XSS (GHSA #26, #27) currently have no upstream patch.
# - nbconvert >= 7.17.1: arbitrary file read/write via path traversal; uncontrolled search path on Windows
constraint-dependencies = [
    "urllib3>=2.7.0",
    "idna>=3.15",
    "mistune>=3.2.1",
    "nbconvert>=7.17.1",
]

[project.scripts]
mloda = "mloda_plugins.feature_group.experimental.llm.cli:main"
